Added working API authentication and more API functionality.

--- a/Shackmeets/appsettings.json
+++ b/Shackmeets/appsettings.json
@@ -1,6 +1,7 @@
 {
   "AppSettings": {
-    "Secret": "I AM A SECRET YAY"
+    "Secret": "I AM A SECRET YAY",
+    "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=ShackmeetsDev;Trusted_Connection=True;ConnectRetryCount=0"
   },
   "Logging": {
     "LogLevel": {
