Added more settings.

--- a/Shackmeets/appsettings.json
+++ b/Shackmeets/appsettings.json
@@ -1,5 +1,12 @@
 {
   "AppSettings": {
+    "Chatty": {
+      "Username": "username",
+      "Password": "password"
+    },
+    "GoogleMaps": {
+      "MapsApiKey": ""
+    },
     "Secret": "I AM A SECRET YAY",
     "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=ShackmeetsDev;Trusted_Connection=True;ConnectRetryCount=0"
   },
