--- a/Shackmeets/appsettings.json
+++ b/Shackmeets/appsettings.json
@@ -5,10 +5,10 @@
       "Password": "password"
     },
     "GoogleMaps": {
-      "MapsApiKey": ""
+      "MapsApiKey": "AIzaSyASCzvAms7C6-dnRvwYhBpl4VwoiJlj8MI"
     },
     "Secret": "I AM A SECRET YAY",
-    "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=ShackmeetsDev;Trusted_Connection=True;ConnectRetryCount=0"
+    "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=Shackmeets;Trusted_Connection=True;ConnectRetryCount=0"
   },
   "Logging": {
     "LogLevel": {
