Getting ready for notifications.

--- a/Shackmeets/appsettings.json
+++ b/Shackmeets/appsettings.json
@@ -1,8 +1,8 @@
 {
   "AppSettings": {
     "Chatty": {
-      "Username": "username",
-      "Password": "password"
+      "Username": "Shackmeets",
+      "Password": ""
     },
     "GoogleMaps": {
       "MapsApiKey": "AIzaSyASCzvAms7C6-dnRvwYhBpl4VwoiJlj8MI"
