Swapped out client app with a vanilla React template.

--- a/Shackmeets/ClientApp (backup)/public/manifest.json
+++ b/Shackmeets/ClientApp (backup)/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "shackmeets",
-  "name": "shackmeets",
+  "short_name": "Shackmeets",
+  "name": "Shackmeets",
   "icons": [
     {
       "src": "favicon.ico",
