--- a/Shackmeets/Shackmeets.csproj
+++ b/Shackmeets/Shackmeets.csproj
@@ -29,6 +29,12 @@
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="ClientApp %28backup%29\package-lock.json" />
+    <None Include="ClientApp %28backup%29\package.json" />
+    <None Include="ClientApp %28backup%29\public\manifest.json" />
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
